infra/k8s/applications-mongo-depl copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applications-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: applications-mongo
  template:
    metadata:
      labels:
        app: applications-mongo
    spec:
      containers:
        - name: applications-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: applications-mongo-srv
spec:
  selector:
    app: applications-mongo
  ports:
    - name: applications-db
      protocol: TCP
      port: 27017
      targetPort: 27017
