infra/k8s/conferences-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conferences-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conferences-mongo
  template:
    metadata:
      labels:
        app: conferences-mongo
    spec:
      containers:
        - name: conferences-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: conferences-mongo-srv
spec:
  selector:
    app: conferences-mongo
  ports:
    - name: conferences-db
      protocol: TCP
      port: 27017
      targetPort: 27017
