infra/k8s/conferences-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conferences-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conferences
  template:
    metadata:
      labels:
        app: conferences
    spec:
      containers:
        - name: conferences
          image: madersky/conferences
---
apiVersion: v1
kind: Service
metadata:
  name: conferences-srv
spec:
  selector:
    app: conferences
  ports:
    - name: conferences
      protocol: TCP
      port: 3000
      targetPort: 3000
