infra/k8s/speeches-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speeches-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speeches
  template:
    metadata:
      labels:
        app: speeches
    spec:
      containers:
        - name: speeches
          image: madersky/speeches
---
apiVersion: v1
kind: Service
metadata:
  name: speeches-srv
spec:
  selector:
    app: speeches
  ports:
    - name: speeches
      protocol: TCP
      port: 3000
      targetPort: 3000
