infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: meetbe.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/conferences/?(.*)
            backend:
              serviceName: conferences-srv
              servicePort: 3000
          # - path: /api/posts/?(.*)
          #   backend:
          #     serviceName: posts-srv
          #     servicePort: 3000
          # - path: /api/comments/?(.*)
          #   backend:
          #     serviceName: comments-srv
          #     servicePort: 3000
          - path: /api/profiles/?(.*)
            backend:
              serviceName: profiles-srv
              servicePort: 3000
          # - path: /api/groups/?(.*)
          #   backend:
          #     serviceName: groups-srv
          #     servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
